<resources>
    <string name="app_name">LegoMinifigures</string>
    <string name="lego_minifiguras">Lego Minifiguras</string>
    <string name="cat_logo">Catálogo</string>
    <string name="serie1_cazador">Cazador de la tribu</string>
    <string name="serie1_animadora">Animadora</string>
    <string name="serie1_cavernicola">Hombre de las cavernas</string>
    <string name="serie1_payaso">Payaso de circo</string>
    <string name="serie1_zombie">Zombie</string>
    <string name="serie1_skater">Skater</string>
    <string name="serie1_robot">Robot</string>
    <string name="serie1_maniqui">Maniqui de pruebas</string>
    <string name="serie1_mago">Mago</string>
    <string name="serie1_luchador">Super Luchador</string>
    <string name="serie1_enfermera">Enfermera</string>
    <string name="serie1_ninja">Ninja</string>
    <string name="serie1_bosque">Hombre del bosque</string>
    <string name="serie1_espacio">Hombre del espacio</string>
    <string name="serie1_buceador">Buceador</string>
    <string name="serie1_cowboy">Cowboy</string>
    <string name="adelante">ADELANTE!</string>
    <string name="gracias_por_usar_nuestra_app_con_esta_aplicacion_podras_tener_un_catalogo_de_todas_las_colecciones_de_mninifiguras_existentes">Gracias por usar nuestra app. Con esta aplicacion podras tener un catalogo de todas las colecciones de mninifiguras existentes.</string>
    <string name="colecciones">COLECCIONES</string>
    <string name="completadas_1_d_2_d">Completadas %1$d / %2$d</string>
    <string name="serie_1_1_d_2_d">Serie 1 - %1$d / %2$d</string>
    <string name="serie_2_1_d_2_d">Serie 2 - %1$d / %2$d</string>
    <string name="serie_3_1_d_2_d">Serie 3 - %1$d / %2$d</string>
    <string name="serie_4_1_d_2_d">Serie 4 - %1$d / %2$d</string>
    <string name="serie_5_1_d_2_d">Serie 5 - %1$d / %2$d</string>
    <string name="serie_6_1_d_2_d">Serie 6 - %1$d / %2$d</string>
    <string name="serie_7_1_d_2_d">Serie 7 - %1$d / %2$d</string>
    <string name="serie_8_1_d_2_d">Serie 8 - %1$d / %2$d</string>
    <string name="serie_9_1_d_2_d">Serie 9 - %1$d / %2$d</string>
    <string name="serie_10_1_d_2_d">Serie 10 - %1$d / %2$d</string>
    <string name="serie_11_1_d_2_d">Serie 11 - %1$d / %2$d</string>
    <string name="serie_12_1_d_2_d">Serie 12 - %1$d / %2$d</string>
    <string name="serie_13_1_d_2_d">Serie 13 - %1$d / %2$d</string>
    <string name="serie_14_1_d_2_d">Serie 14 - %1$d / %2$d</string>
    <string name="serie_15_1_d_2_d">Serie 15 - %1$d / %2$d</string>
    <string name="serie_16_1_d_2_d">Serie 16 - %1$d / %2$d</string>
    <string name="serie_17_1_d_2_d">Serie 17 - %1$d / %2$d</string>
    <string name="serie_18_1_d_2_d">Serie 18 - %1$d / %2$d</string>
    <string name="serie_19_1_d_2_d">Serie 19 - %1$d / %2$d</string>
    <string name="serie_movie1_1_d_2_d">Serie Movie 1 - %1$d / %2$d</string>
    <string name="serie_olimpico_1_d_2_d">Serie Olimpico - %1$d / %2$d</string>
    <string name="serie_Simpsons1_1_d_2_d">Simpsons 1 - %1$d / %2$d</string>
    <string name="serie_Simpsons2_1_d_2_d">Simpsons 2- %1$d / %2$d</string>
    <string name="serie2_espartano">Guerrero espartano</string>
    <string name="serie2_socorrista">Socorrista</string>
    <string name="serie2_bruja">Bruja</string>
    <string name="serie2_estrellapop">Estrella del pop</string>
    <string name="serie2_levantamiento">Musculoso</string>
    <string name="serie2_circo">Ringmaster</string>
    <string name="serie2_explorador">Explorador</string>
    <string name="serie2_karate">Maestro de karate</string>
    <string name="serie2_surfero">Surfero</string>
    <string name="serie2_faraon">Faraon</string>
    <string name="serie2_vampiro">Vampiro</string>
    <string name="serie2_poli">Policia de trafico</string>
    <string name="serie2_mimo">Mimo</string>
    <string name="serie2_esquiador">Esquiador</string>
    <string name="serie2_disco">Chico disco</string>
    <string name="serie2_mex">Mexicano</string>
    <string name="serie3_alien">Alient Espacial</string>
    <string name="serie3_baseball">Jugador de baseball</string>
    <string name="serie3_indio">Jefe de tribu</string>
    <string name="serie3_elfo">Elfo</string>
    <string name="serie3_gorila">Gorila</string>
    <string name="serie3_hula">Bailarina</string>
    <string name="serie3_momia">Momia</string>
    <string name="serie3_pesca">Pescador</string>
    <string name="serie3_piloto">Piloto</string>
    <string name="serie3_racer">Corredor</string>
    <string name="serie3_rapero">Rapero</string>
    <string name="serie3_samurai">Samurai</string>
    <string name="serie3_snow">Snowboarder</string>
    <string name="serie3_sumo">Luchador de sumo</string>
    <string name="serie3_tenis">Jugador de tenis</string>
    <string name="serie3_villano">Villano espacial</string>
    <string name="serie4_artista">Artista</string>
    <string name="serie4_chicasurfer">Chica Surfera</string>
    <string name="serie4_cientifico">Cientifico</string>
    <string name="serie4_futbol">Futbolista</string>
    <string name="serie4_hockey">Jugador de Hockey</string>
    <string name="serie4_loboman">Hombre lobo</string>
    <string name="serie4_kimono">Chica con kimono</string>
    <string name="serie4_mosnter">Monstruo</string>
    <string name="serie4_mosquetero">Mosquetero</string>
    <string name="serie4_nave">Marinero</string>
    <string name="serie4_nuclear">Traje nuclear</string>
    <string name="serie4_patinadora">Patinadora sobre hielo</string>
    <string name="serie4_punk">Punk</string>
    <string name="serie4_skater">Skater Urbano</string>
    <string name="serie4_vik">Vikingo</string>
    <string name="serie4_nomo">Gnomo</string>
    <string name="serie5_boxeo">Boxeador</string>
    <string name="serie5_cavewoman">Mujer cavernicola</string>
    <string name="serie5_cleopatra">Cleopatra</string>
    <string name="serie5_detec">Detective</string>
    <string name="serie5_enanomaligno">Enano maligno</string>
    <string name="serie5_fitness">Chica Fitness</string>
    <string name="serie5_gangster">Gangster</string>
    <string name="serie5_gladiador">Gladiador</string>
    <string name="serie5_graduado">Graduado</string>
    <string name="serie5_guardiareal">Guardia Real</string>
    <string name="serie5_lagarto">Hombre Lagarto</string>
    <string name="serie5_lenador">Leñador</string>
    <string name="serie5_payasopeque">Payaso Pequeño</string>
    <string name="serie5_pescadorhielo">Pescador en el hielo</string>
    <string name="serie5_snowchico">Snowboarder</string>
    <string name="serie5_zoo">Cuidadora del zoo</string>
    <string name="serie6_alienclass">Alien Clasico</string>
    <string name="serie6_bandido">Bandido</string>
    <string name="serie6_carnicero">Carnicero</string>
    <string name="serie6_chicagalactica">Chica Intergalactica</string>
    <string name="serie6_chicaskate">Chica Skater</string>
    <string name="serie6_cirujano">Cirujano</string>
    <string name="serie6_dormilon">Dormilon</string>
    <string name="serie6_flamenco">Bailaora Flamenca</string>
    <string name="serie6_genio">Genio</string>
    <string name="serie6_lepre">Leprechaun</string>
    <string name="serie6_libertad">Estatua de la libertad</string>
    <string name="serie6_luchador">Guerrero escoces</string>
    <string name="serie6_mecanico">Mecanico</string>
    <string name="serie6_minotauro">Minotauro</string>
    <string name="serie6_robot">Robot</string>
    <string name="serie6_romano">Guerrero Romano</string>
    <string name="serie7_azteca">Guerrero Azteca</string>
    <string name="serie7_caperucita">Caperucita</string>
    <string name="serie7_chicavik">Chica Vikinga</string>
    <string name="serie7_conejo">Chico Conejo</string>
    <string name="serie7_gaitero">Gaitero</string>
    <string name="serie7_guerreromalo">Guerrero Maligno</string>
    <string name="serie7_hippie">Hippie</string>
    <string name="serie7_hombrejungla">Hombre de la jungla</string>
    <string name="serie7_motorista">Motorista</string>
    <string name="serie7_nadadora">Nadadora</string>
    <string name="serie7_novia">Novia</string>
    <string name="serie7_patrulla">Patrulla Galactica</string>
    <string name="serie7_programador">Programador</string>
    <string name="serie7_reyoceano">Rey del oceano</string>
    <string name="serie7_rockera">Rockera</string>
    <string name="serie7_tenista">Tenista</string>
    <string name="serie8_aleman">Aleman con Pretzel</string>
    <string name="serie8_alienvillano">Alien Villano</string>
    <string name="serie8_animadora">Animadora</string>
    <string name="serie8_buzo">Buzo</string>
    <string name="serie8_capipirata">Capitan Pirata</string>
    <string name="serie8_conquistador">Conquistador</string>
    <string name="serie8_cowgirl">Cowgirl</string>
    <string name="serie8_dj">DJ</string>
    <string name="serie8_hamlet">Hamlet</string>
    <string name="serie8_hada">Hada</string>
    <string name="serie8_negocio">Hombre de negocios</string>
    <string name="serie8_americafutbol">Jugador Futbol Americano</string>
    <string name="serie8_robotmalo">Robot maligno</string>
    <string name="serie8_santa">Santa</string>
    <string name="serie8_skiadora">Esquiadora</string>
    <string name="serie8_vampiro">Vampiro Murcielago</string>
    <string name="serie9_pitonisa">Pitonisa</string>
    <string name="serie9_alienveng">Alien Vengador</string>
    <string name="serie9_buenoymalo">Hombre malo y bueno</string>
    <string name="serie9_camarero">Camarero</string>
    <string name="serie9_ciclope">Ciclope</string>
    <string name="serie9_disfrazpollo">Hombre Pollo</string>
    <string name="serie9_elfa">Elfa</string>
    <string name="serie9_emperadorrom">Emperador Romano</string>
    <string name="serie9_hollywood">Estrella de Hollywood</string>
    <string name="serie9_font">Fontanero</string>
    <string name="serie9_guerrero">Guerrero Heroico</string>
    <string name="serie9_juez">Juez</string>
    <string name="serie9_poli">Policia</string>
    <string name="serie9_patin">Patinador Derby</string>
    <string name="serie9_robot">Robot de combate</string>
    <string name="serie9_sirena">Sirena</string>
    <string name="serie10_abu">Abuelo</string>
    <string name="serie10_biblio">Bibliotecaria</string>
    <string name="serie10_capibarco">Capitan de barco</string>
    <string name="serie10_abeja">Chica abeja</string>
    <string name="serie10_comandanterom">Comandante Romano</string>
    <string name="serie10_guerreroindio">Guerrero Indio</string>
    <string name="serie10_influn">Influencer</string>
    <string name="serie10_baseball">Jugador de baseball</string>
    <string name="serie10_mecani">Mecanico de moto</string>
    <string name="serie10_medusa">Medusa</string>
    <string name="serie10_gold">Mr.Gold</string>
    <string name="serie10_mujguerrera">Mujer guerrera</string>
    <string name="serie10_paintball">Jugador de Paintball</string>
    <string name="serie10_paraca">Paracaidista</string>
    <string name="serie10_payaso">Payaso Triste</string>
    <string name="serie10_pintor">Pintor</string>
    <string name="serie10_soldadore">Soldado revolucionario</string>
    <string name="serie11_abuela">Abuela</string>
    <string name="serie11_barbaro">Barbaro</string>
    <string name="serie11_camerara">Camarera Ochentera</string>
    <string name="serie11_chiccientifica">Cientifica</string>
    <string name="serie11_chicapretz">Chica con Pretzel</string>
    <string name="serie11_robotgirl">Chica Robot</string>
    <string name="serie11_elfo">Elfo navidad</string>
    <string name="serie11_espanta">Espantapajaros</string>
    <string name="serie11_jengibre">Galleta Jengibre</string>
    <string name="serie11_guerreroisla">Guerrero Isleno</string>
    <string name="serie11_mechmalo">Mech Maligno</string>
    <string name="serie11_montanero">Montañero</string>
    <string name="serie11_poli">Policia</string>
    <string name="serie11_saxo">Saxofonista</string>
</resources>