<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoAzul"
    tools:context=".ColeccionesActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:drawableEnd="@drawable/lego"
        android:fontFamily="@font/legohouse"
        android:gravity="center"
        android:text="@string/colecciones"
        android:textColor="@android:color/background_light"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coleccionesComID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitulo"
        android:layout_margin="@dimen/padding"
        android:drawableStart="@drawable/wink"
        android:drawableEnd="@drawable/gentleman"
        android:fontFamily="@font/legobrix"
        android:gravity="center"
        android:text="@string/completadas_1_d_2_d"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="true"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/coleccionesComID"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSerie1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1 "
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_1_1_d_2_d"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSerie2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_2_1_d_2_d"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSerie3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_3_1_d_2_d"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSerie4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_4_1_d_2_d"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSerie5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_5_1_d_2_d"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSerie6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_6_1_d_2_d"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSerie7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_7_1_d_2_d"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSerie8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_8_1_d_2_d"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSerie9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_9_1_d_2_d"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSerie10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botoncircle"
                    android:text="@string/serie_10_1_d_2_d"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>